# validator-endpoint

./: .env.example  .gitignore  DOCKERFILE  Dockerfile  README.md  docker-compose.template.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  validator_prompter.py
admin-ui/: .env.local.example  .env.production  .gitignore  Dockerfile  package.json
admin-ui/components/: APIKeyOperations.tsx  LoginButton.tsx  LogoutButton.tsx  Stats.tsx
admin-ui/pages/: _app.tsx  configuration.tsx  index.tsx
admin-ui/theme/: index.tsx
admin-ui/utils/: api-handlers.tsx  api-keys.tsx  fetcher.ts
backend/: pyproject.toml
backend/btvep/: config.py  constants.py
btvep/: README.md  __init__.py  btvep_models.py  chat_helpers.py  config.py  constants.py  fastapi_dependencies.py  pyproject.toml  server.py  types.py  validator_prompter.py
btvep/admin_api/: __init__.py  config.py  key.py  logs.py  ratelimit.py
btvep/api/: api_keys.py  chat.py  conversation.py  dependencies.py
btvep/btvep/: btvep_models.py  chat_helpers.py  metagraph.py  prompting.py  validator_prompter.py
btvep/cli/: __init__.py  config.py  key.py  logs.py  ratelimit.py
btvep/db/: __init__.py  api_keys.py  request.py  tables.py  utils.py
btvep/models/: key.py  user.py
chat-ui/: .env.local.example  next.config.js  package-lock.json  package.json
chat-ui/components/: APIKeyOperations.tsx  Button.tsx  (+3 more)
docs/: README.md  cli.md  docker.md  requests.md
frontend/: constants.ts  package.json
tests/: test_vendpoint.py
vendpoint/: __init__.py  __main__.py  cli.py  main.py  server.py
(+58 files in other folders)
