[tool.poetry]
name = "btvep"
version = "0.1.1"
description = "Validator endpoint for bittensor"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
btvep = "btvep.cli:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typer = {extras = ["all"], version = "^0.9.0"}
tabulate = "^0.9.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
bittensor = "5.3.0"
peewee = "^3.16.2"
fastapi-limiter = "^0.1.5"
dateparser = "^1.1.8"
pydantic = "^1.10.8"
openai = "^0.27.8"
torch = ">=2.0.0, !=2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
